# cookbook

./: .clang-format  CMakeLists.txt  README.md
include/: cookbook.h
src/: cookbook.cpp  main.cpp
